k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:  # Déplacé ici
      - name: regcred
      containers:
      - name: backend
        image: eliezeribghi/codex-back:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: images
          mountPath: /app/public/images
      volumes:
      - name: images
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
